<resources>
    <string name="app_name">Bind-Up</string>
    <string name="search_title">Search</string>


    <string name="first_time_user_message">
        We noticed this is your first login. Before start to work with app , and exchange VCards,
        please, create your first VCard by pressing +.
    </string>

    <!--Navigation Drawer Titles -->
    <string name="menu_item_MyVcards">My VCards</string>
    <string name="menu_item_Contacts">Contacts</string>
    <string name="menu_item_Groups">Groups</string>
    <string name="menu_item_History">History</string>
    <string name="menu_item_LogOut">LogOut</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="myvcard_first_appearance">Create your first VCard by tapping plus</string>
    <string name="edit">Edit</string>
    <string name="delete_message" > Are you sure you want delete this VCard? This action can not be undone</string>
    <string name="groups_first_appearance">Create your first group by tapping plus</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!--BUTTONS-->
    <string name="delete_confirmation_button">YES</string>
    <string name="delete_declining_button">NO</string>

    <!-- Fragment Tags -->
    <string name="tag_fragment_my_vcard">My VCard</string>
    <string name="tag_fragment_contacts">Contacts</string>
    <string name="tag_fragment_groups">Groups</string>
    <string name="tag_fragment_my_vcard_first_login">My VCard First Login</string>
    <string name="tag_fragment_my_vcard_edit">My VCard Edit</string>
    <string name="tag_fragment_groups_no_groups">Groups no Groups</string>
    <string name="tag_fragment_share">Share</string>
    <string name="tag_fragment_my_vcard_create_card">My VCard Create Card</string>
    <string name="tag_fragment_preview_my_vcard">My VCard Preview</string>
    <string name="tag_fragment_preview_contacts">Contacts Preview</string>
    <string name="tag_fragment_group_preview_single_contact">Groups Preview Of The Single Contact</string>
    <string name="tag_fragment_groups_create">Groups Create</string>

    <string name="message_for_one_more_tap_to_exit">1 more click to exit</string>
    <string name="no_vcards_share_fragment">You don\'t have any vcards to share. Create one first.</string>
    <string name="hint_for_name_for_group">Enter name of the group</string>
    <string name="hint_for_description_for_group">Put a short description about this group</string>
    <string name="upload_logo_groups_btn_sign">Upload logo</string>
    <string name="create_groups_add_user_btn">Add users</string>
    <string name="add_users_group_create_btn">Add users</string>
    <string name="created_group_message">Group has been sucessfully created!</string>
    <string name="contacts_preview_add_to_group_btn">Add to group</string>
    <string name="tag_fragment_groups_preview">Groups Preview</string>
    <string name="registration_succesfully_finished_message">Registration is successful! Now login in progress, please wait...</string>
    <string name="login_in_message">Login... Please wait</string>
    <string name="registration_process_message">Registration in progress. Please wait...</string>
    <string name="registration_already_used_email_message">This email is already in use.</string>
    <string name="login_wrong_userdata_message">Wrong email or password.</string>
    <string name="there_is_no_internet">No internet connection. Please, turn on internet.</string>
    <string name="myvcard_the_card_is_deleted_message">Card is deleted</string>
    <string name="create_myvcard_save_btn">Save</string>
    <string name="create_myvcard_upload_btn">Upload Logo</string>

    <!--Name of the fragments (toolbar name)-->
    <!--MY VCARD REGION-->
    <string name="toolbar_name_MyVcards">My VCards</string>
    <string name="toolbar_name_MyVcards_create">Create VCard</string>
    <string name="toolbar_name_MyVcards_preview">VCard Preview</string>
    <string name="toolbar_name_MyVcards_edit">VCard editing</string>

    <!--CONTACT REGION-->
    <string name="toolbar_name_Contacts">Contacts</string>
    <string name="toolbar_name_Contacts_preview">Contact preview</string>

    <!--GROUP REGION-->
    <string name="toolbar_name_Groups">Groups</string>
    <string name="toolbar_name_Groups_create">Create group</string>
    <string name="toolbar_name_Groups_preview">Group preview</string>
    <string name="toolbar_name_Share">Share</string>
    <string name="delete_message_contact">Are you sure you want to delete this contact?</string>
    <string name="menu_item_agreement">Agreement</string>
    <string name="tag_fragment_agreement">Agreement Fragment</string>
    <string name="toolbar_name_agreement">Agreement</string>
    <string name="add_users_group_cancel_btn">Cancel</string>
    <string name="delete_contact_from_group">Delete contact from group</string>
    <!--<string name="menu_item_History">History</string>-->
    <!--<string name="menu_item_LogOut">LogOut</string>-->
</resources>
