<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/groups_preview_add_to_group_button"
        android:title="@string/contacts_preview_add_to_group_btn"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:icon="@drawable/ic_group_add_black_24dp"/>

    <item
        android:id="@+id/groups_preview_search_button"
        android:title="@string/edit"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:icon="@drawable/ic_search_black_24dp"/>

    <item
        android:id="@+id/groups_preview_delete_contact_from_group_button"
        android:title="@string/delete_contact_from_group"
        app:showAsAction="always"
        android:orderInCategory="3"
        android:icon="@drawable/ic_delete_black_24dp"/>


</menu>