<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:LTD="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/preview_fragment_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true">

                        <ImageView
                            android:id="@+id/create_group_logo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:adjustViewBounds="true"
                            android:scaleType="fitXY"/>

                    </RelativeLayout>

                </RelativeLayout>

                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true">

                        <EditText
                            android:layout_marginTop="20dp"
                            android:id="@+id/create_group_name_edit_text"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"
                            android:padding="8dp"
                            android:background="@drawable/grey_border_bottom"
                            android:gravity="center_horizontal"
                            android:hint="@string/hint_for_name_for_group"
                            android:textColor="@color/Black"
                            android:textSize="16sp"
                            android:shadowDx="2"
                            android:maxLines="1"
                            android:maxLength="256"/>

                        <EditText
                            android:id="@+id/create_group_description_edit_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"
                            android:padding="8dp"
                            android:background="@drawable/grey_border_bottom"
                            android:gravity="center_horizontal"
                            android:hint="@string/hint_for_description_for_group"
                            android:textColor="@color/Black"
                            android:textSize="16sp"
                            android:shadowDx="2"
                            android:maxLength="256"
                            android:inputType="textMultiLine"
                            android:maxLines="5"
                            android:layout_below="@id/create_group_name_edit_text"/>

                    </RelativeLayout>

                </RelativeLayout>

                <!--SAVE BUTTON!!!-->

                <RelativeLayout
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true">

                        <Button
                            android:id="@+id/create_save_groups_btn"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:text="SAVE"
                            android:layout_marginTop="10dp"
                            android:elevation="8dp"
                            android:layout_alignParentBottom="true"/>

                        <Button
                            android:id="@+id/create_upload_logo_groups_btn"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/create_save_groups_btn"
                            android:background="@color/colorPrimary"
                            android:text="@string/upload_logo_groups_btn_sign"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="10dp"
                            android:elevation="8dp"
                            android:layout_alignParentBottom="true"/>

                        <Button
                            android:id="@+id/create_add_users_groups_btn"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/create_upload_logo_groups_btn"
                            android:background="@color/colorPrimary"
                            android:text="@string/add_users_group_create_btn"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="10dp"
                            android:elevation="8dp"
                            android:layout_alignParentBottom="true"/>
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>
</RelativeLayout>








